// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enum to JS 1`] = `
"// @flow

export const MyEnum: $ReadOnly<{|
  'OK': 'OK',
  'ERROR': 'ERROR',
|}> = Object.freeze({
  'OK': 'OK',
  'ERROR': 'ERROR',
});
"
`;

exports[`enums work with typedefs 1`] = `
"// @flow

export const MyEnum: $ReadOnly<{|
  'OK': 'OK',
  'ERROR': 'ERROR',
|}> = Object.freeze({
  'OK': 'OK',
  'ERROR': 'ERROR',
});

export const MyOtherEnum: $ReadOnly<{|
  'OK': 'OK',
  'ERROR': 'ERROR',
|}> = Object.freeze({
  'OK': 'OK',
  'ERROR': 'ERROR',
});
"
`;
